# pandaPIengine

./: .gitignore  README.md
src/: .gitignore  CMakeLists.txt  Model.cpp  Model.h  PrecsEffs.cpp  PrecsEffs.h
src/sat/: pdt.cpp  state_formula.cpp
src/translator/: CMakeLists.txt  main.cpp
src/translator/fuzzer/include/: fuzzer.h
src/translator/fuzzer/src/: fuzzer.cpp
src/translator/htn/include/: htn.h  method.h  task.h
src/translator/include/: translator.h
src/translator/test/: CMakeLists.txt
src/translator/test/to_htn/: output.sas  test.sas  test_plan.txt  test_to_htn.cpp
src/translator/to_htn/include/: block.h  compound.h  counter.h  insertion.h  match.h  meta.h  to_htn.h  validiation.h
src/translator/to_htn/src/: insertion.cpp  match.cpp  to_htn.cpp  validiation.cpp
src/translator/util/include/: accumulation.h  graph.h  optimize.h  reachability.h  traversal.h  util.h  validation.h
src/translator/util/src/: optimize.cpp  reachability.cpp  traversal.cpp  validation.cpp
src/verifier/: CMakeLists.txt  cmdline.c  cmdline.h  options.ggo
src/verifier/include/: verifier.h
src/verifier/sat_verifier/include/: constraints.h  depth.h  sat_verifier.h  variables.h
src/verifier/sat_verifier/src/: constraints.cpp  depth.cpp  sat_verifier.cpp  variables.cpp
src/verifier/src/: run_verifier.cpp
src/verifier/test/: test-task.sas  test_depth.cpp
src/verifier/to_verifier/include/: to_verifier.h
src/verifier/util/include/: distribution.h  inference.h
src/verifier/util/src/: distribution.cpp
